# Snake_Project

./: CMakeLists.txt  Doxyfile  Makefile  Makefile.in  README.md  README_prof.md  compte_rendu.doc  config.status  configure  configure.ac  score.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: affichage.c  affichage.c.orig  affichage.h  alpha-button.c  alpha-button.h  alpha-snake  application.c  application.h  bonus.c  bonus.c.orig  bonus.h  client.c  client.h  collisions.c  collisions.h  config.c  config.h  game_multi.c  game_multi.h  ia.c  ia.h  list.c  list.h  main.c  menu.c  menu.h  multi.c  multi_c  multi_c.c  multi_c.h  multi_h  multi_h.c  multi_h.h  partie.c  partie.h  partie.h.orig  score.c  score.h  serveur.c  serveur.h  (+3 more)
src/gui/: menu.json  stage.json
src/reseau/: client.c  client.h  multi.c  multi.h  serveur.c
src/widgets/: alpha-button.c  alpha-button.h  alpha-check-box.c  alpha-check-box.h  alpha-field.c  alpha-field.h  utils.c  utils.h
tests/: README  tests.c
